<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/txt_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/cellphone"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_cellphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#CCCCCC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#CCCCCC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_info"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_service"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txt_type_service"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txt_product"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_service"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txt_date_service"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observation"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txt_observation"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:background="#CCCCCC" />

</LinearLayout>