<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="2dp"
    app:strokeColor="@color/grey_text_color"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvServiceID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="OS - 354140 - 2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_home" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/product"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_product" />

        <TextView
            android:id="@+id/tvProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/shiftSimple"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_shift" />

        <TextView
            android:id="@+id/tvShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Mañana"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnServiceInfo"
                style="@style/MySegmentedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:text="@string/service_information"
                app:strokeColor="@color/blue_500" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartService"
                style="@style/MySegmentedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue_500"
                android:text="@string/start_service"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
